<resources>
    <string name="app_name">ZEIR</string>
    <string name="invalid_device_date">Device current datetime must be after last synced server datetime which was </string>
    <string name="home_women_label">Woman</string>
    <string name="home_field_monitor_label">Stock</string>
    <string name="child_entries">Child</string>
    <string name="child_profile">CHILD </string>
    <string name="child_DOB">Date Of Birth</string>
    <string name="child_reminder">REMINDER</string>
    <string name="child_next_vaccine">DUE VACCINE</string>
    <string name="child_register_title">Child Register</string>
    <string name="register_search_hint">Search</string>
    <string name="child_title">Child</string>
    <string name="child_alphabetical_sort">Alphabetical (Child Name)</string>
    <string name="child_id_sort">Program Id </string>
    <string name="child_search_hint">Search Child</string>
    <string name="child_details_title"> Child Details</string>
    <string name="stock_title"> Stock Control</string>
    <string name="vaccination_summary"> Vaccination Summary</string>
    <string name="search_hint">Search Register</string>
    <string name="birthdate">DOB</string>
    <string name="age">Age</string>
    <string name="uc">UC</string>
    <string name="town">Town</string>
    <string name="address">Address</string>
    <string name="birthdate_age">AGE</string>
    <string name="epi_number">ID</string>
    <string name="child_contact_number">WEIGHT</string>
    <string name="marital_status">Marital Status</string>
    <string name="woman_entries"></string>
    <string name="woman_register_title">Woman Register</string>
    <string name="str_woman_search_hint">Search Woman Register</string>
    <string name="woman_profile">WOMAN PROFILE</string>
    <string name="woman_title">Woman</string>
    <string name="woman_contact_number">CONTACT</string>
    <string name="woman_edd">EDD and GA</string>
    <string name="woman_last_vaccine">LAST VACCINE</string>
    <string name="woman_next_vaacine">NEXT VACCINE DUE</string>
    <string name="woman_alphabetical_sort">Alphabetical (Name)</string>
    <string name="id_sort">ZEIR ID </string>
    <string name="woman_details_title">Woman Profile</string>
    <string name="day">DAY\n</string>
    <string name="bcg">BCG\n</string>
    <string name="opv">OPV\n</string>
    <string name="ipv">IPV\n</string>
    <string name="penta">PENTA\n</string>
    <string name="measles">MEASLES\n</string>
    <string name="pcv">PCV\n</string>
    <string name="tt">TT\n</string>
    <string name="total">TOTAL\n</string>
    <string name="used">USED</string>
    <string name="wasted">WASTED</string>
    <string name="month">MONTH</string>
    <string name="month_target">MONTHLY TARGET</string>
    <string name="month_received">STOCK RECEIVED</string>
    <string name="month_used">STOCK USED</string>
    <string name="month_wasted">STOCK WASTED</string>
    <string name="month_inhand">BALANCE IN HAND</string>
    <string name="stock_register_title">Stock Register</string>
    <string name="stock_register_monthly_view">Monthly</string>
    <string name="stock_register_daily_view">Daily</string>
    <string name="field_entries">Stock Register</string>
    <string name="field_title">Stock Register</string>
    <string name="str_field_search_hint">Search Register</string>
    <string name="pick_report">Report</string>
    <string name="field_details_title">Stock Position</string>
    <string name="title_activity_vaccine_report">VaccineReport</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="userNameText">User Name</string>
    <string name="passwordText">Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="undo">Undo</string>
    <string name="unauthorized">Please check the credentials.</string>
    <string name="unauthorized_group">Your user group is not allowed to access this device.</string>
    <string name="unknown_response">Login failed. Please try again later.</string>
    <string name="no_internet_connectivity">No internet connection. Please ensure data connectivity.</string>
    <string name="form_saved_dialog_title">Form Submission</string>
    <string name="form_saved_success_dialog_message">Form saved successfully!</string>
    <string name="form_saved_failed_dialog_message">Form saving encountered an error. </string>
    <string name="ok_button_label">OK</string>
    <string name="forminputerror">Please check the form for any error/missing input marked in Red box</string>
    <string name="okforminputerror">ok</string>
    <string name="child_followup">Child Follow Up</string>
    <string name="woman_followup">Woman Follow Up</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="global_search_hint">Search Globally</string>
    <string name="global_search">Global Search</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="child_siblings">%s siblings</string>
    <string name="neutral_sex_id">his or her</string>
    <string name="female_sex_id">her</string>
    <string name="male_sex_id">his</string>
    <string name="label_zeir">ZEIR</string>
    <string name="label_immunization_records">IMMUNISATION &amp; SERVICES</string>
    <string name="str_search_hint">Search name or ID</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="zeir">ZEIR</string>
    <string name="select_location">Select Location</string>
    <string name="no_openmrs_id">No unique ids found. Click on the sync button to get more and if this error persists contact the system admin.</string>
    <string name="edit_registration_data">Edit registration data</string>
    <string name="edit_immunization_data">Edit immunisation data</string>
    <string name="edit_recurring_services_data">Edit recurring services data</string>
    <string name="record_bcg_2">Record BCG 2 (if no scar)</string>
    <string name="mark_inactive">Mark inactive</string>
    <string name="mark_active">Mark active</string>
    <string name="mark_as_lost_to_followup">Mark as lost to followup</string>
    <string name="mark_as_not_lost_to_followup">Mark as not lost to followup</string>
    <string name="report_deceased">Report deceased</string>
    <string name="report_adverse_event">Report adverse event</string>
    <string name="syncing">Syncing...</string>
    <string name="sync_failed">Sync failed</string>
    <string name="retry">Retry</string>
    <string name="sync_complete">Sync complete</string>
    <string name="sync_">Sync%1$s</string>
    <string name="last_sync">(last %1$s)</string>
    <string name="now">now</string>
    <string name="ic_health_facility">&#xe0b9;</string>
    <string name="ic_zone">&#xe052;</string>
    <string name="service_location">Service Location</string>
    <string name="ic_check">&#xe038;</string>
    <string name="no_record">No Record(s) Found!</string>
    <string name="overdue_due">Overdue/Due (%1$s)</string>
    <string name="saving_dialog_title">Saving…</string>
    <string name="updating_dialog_title">Updating…</string>
    <string name="please_wait_message">Please wait</string>
    <string name="saving_dialog_message">Please wait</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="out_and_inside">Outside and Inside\nMy Catchment Area</string>
    <string name="requires_internet_connection">(Requires internet connection)</string>
    <string name="my_catchment_area">My Catchment Area Only</string>
    <string name="search_limits">Search limits</string>
    <string name="client_status">Client status</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="lost_to_follow_up">Lost to Follow-Up</string>
    <string name="lost_to_follow_up_with_nl">Lost to\nFollow-Up</string>
    <string name="status">status</string>
    <string name="zeir_id">ZEIR ID</string>
    <string name="zeir_id_hint">ZEIR ID number</string>
    <string name="first_name">First Name</string>
    <string name="first_name_hint">First name</string>
    <string name="last_name">Last Name</string>
    <string name="last_name_hint">Last name</string>
    <string name="mother_guardian_name">Mother/Guardian Name</string>
    <string name="mother_guardian_name_hint">Mother or guardian name</string>
    <string name="mother_guardian_nrc">Mother/Guardian NRC</string>
    <string name="mother_guardian_nrc_hint">Mother or guardian NRC number</string>
    <string name="mother_guardian_phone_number">Mother/Guardian Phone Number</string>
    <string name="mother_guardian_phone_number_hint">Mother or guardian phone number</string>
    <string name="date_birth_range">Date of birth range</string>
    <string name="start_date_hint">Select start date</string>
    <string name="end_date_hint">Select end date</string>
    <string name="update_search_params">Please update at least one search parameter</string>
    <string name="no_vaccine_record_found">No vaccination record found</string>
    <string name="matching_results">%1$s matching results found</string>
    <string name="check_child_bcg_scar">"Check for child's BCG scar"</string>
    <string name="move_to_catchment_confirm_dialog_title">Confirm move</string>
    <string name="move_to_catchment_confirm_dialog_message">Are you sure you want to move this record to your catchment area?</string>
    <string name="mother_lookup_results">Matching records</string>
    <string name="dismiss">Cancel</string>
    <string name="change_status">Change status</string>
    <string name="title_activity_stock_control">StockControlActivity</string>
    <string name="device_timezone_changed">"The device's timezone changed. Please login again."</string>
    <string name="device_time_changed">"The device's time has changed. Please login again."</string>
    <string name="side_nav_hia2">HIA 2 Reports</string>
    <string name="hia2_daily_tallies">Daily Tallies</string>
    <string name="hia2_draft_monthly">Draft Monthly</string>
    <string name="hia2_draft_monthly_with_count">Draft Monthly (%1$d)</string>
    <string name="hia2_sent_monthly">Sent Monthly</string>
    <string name="title_activity_hia2_report">HIA2 Reports</string>
    <string name="start_new_report">Start new report</string>
    <string name="no_draft_reports">No draft reports</string>
    <string name="no_monthly_ready">No monthly HIA2 reports ready to be completed.</string>
    <string name="reports_available">Reports Available</string>
    <string name="sent_reports_">Sent Reports > %1$s</string>
    <string name="submitted_by_">Submitted %1$s by %2$s</string>
    <string name="sent_by">Sent %1$s by %2$s</string>
    <string name="daily_tally_">Daily Tally > %1$s</string>
    <string name="sync_failed_no_internet">Sync failed. Check your internet connection.</string>
    <string name="loading">Loading</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="started">Started</string>
    <string name="searching_dialog_title">Searching…</string>
    <string name="side_nav_add">Add new child</string>
    <string name="side_nav_out_of_catchment">Record out of catchment vaccination</string>
    <string name="side_nav_sync">Sync</string>
    <string name="side_nav_coverage">Coverage Reports</string>
    <string name="side_nav_dropout">Dropout Reports</string>
    <string name="dropout_month_header">Month</string>
    <string name="dropout_started_completed_header">(Started - Completed) / Started </string>
    <string name="dropout_percentage_header">Dropout Percent</string>
</resources>