<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/client_list_header_dark_grey"
    android:orientation="horizontal"
    android:weightSum="10">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="1dp"
        android:layout_weight="4.4"
        android:orientation="horizontal">

        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/child_header"
            style="@style/CustomFontTextViewStyle.ClientList.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/child_profile"
            android:textAllCaps="true"
            android:textColor="@color/client_list_grey"
            android:textSize="16sp" />


        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/child_age_header"
            style="@style/CustomFontTextViewStyle.ClientList.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="7dp"
            android:text="@string/birthdate_age"
            android:textAllCaps="true"
            android:textColor="@color/client_list_grey"
            android:textSize="16sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="1dp"
        android:layout_weight="1.8">

        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/child_zeir_id_header"
            style="@style/CustomFontTextViewStyle.ClientList.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/epi_number"
            android:textAllCaps="true"
            android:textColor="@color/client_list_grey"
            android:textSize="16sp" />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="1dp"
        android:layout_weight="1.7">

        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/child_weight_header"
            style="@style/CustomFontTextViewStyle.ClientList.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/child_contact_number"
            android:textAllCaps="true"
            android:textColor="@color/client_list_grey"
            android:textSize="16sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2">

        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/child_due_header"
            style="@style/CustomFontTextViewStyle.ClientList.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/child_next_vaccine"
            android:textAllCaps="true"
            android:textColor="@color/client_list_grey"
            android:textSize="16sp" />
    </RelativeLayout>
</LinearLayout>
