<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/row_lin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/transparent"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.9">

            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/tv"
                style="@style/CustomFontTextViewStyle.ClientList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/cohort_coverage_report_vertical_margin"
                android:paddingLeft="@dimen/cohort_coverage_report_padding_left"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/cohort_coverage_report_vertical_margin"
                android:text="@string/dropout_month_header"
                android:textColor="@color/text_black"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.4">

            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/details"
                style="@style/CustomFontTextViewStyle.ClientList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/cohort_coverage_report_vertical_margin"
                android:paddingLeft="@dimen/cohort_coverage_report_padding_left"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/cohort_coverage_report_vertical_margin"
                android:text="@string/dropout_started_completed_header"
                android:textColor="@color/text_black"
                android:textSize="18sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7">

            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/other"
                style="@style/CustomFontTextViewStyle.ClientList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingBottom="@dimen/cohort_coverage_report_vertical_margin"
                android:paddingLeft="@dimen/cohort_coverage_report_padding_left"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/cohort_coverage_report_vertical_margin"
                android:text="@string/dropout_percentage_header"
                android:textColor="@color/text_black"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.25dp"
        android:layout_below="@+id/row_lin"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/light_grey" />
</RelativeLayout>