<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.NavigationView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_view"
    android:layout_width="450dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="#2c2c2c"
    android:fitsSystemWindows="true"
    app:itemBackground="@drawable/drawer_item_background"
    app:itemIconTint="@android:color/white"
    app:itemTextColor="@android:color/white"
    app:theme="@style/AppThemeNoTitle.NoActionBar.NavigationDrawerStyle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/nav_header_base" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/smart_register_client_divider_height"
            android:src="#474747" />

        <LinearLayout
            android:id="@+id/nav_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/add_child_image_view"
                android:layout_width="@dimen/custom_navigation_icon_size"
                android:layout_height="@dimen/custom_navigation_icon_size"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:paddingTop="5dp"
                android:src="@drawable/ic_action_add" />

            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/add_child_text_view"
                style="@style/CustomFontTextViewStyle.ClientList.Light.twoline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/side_nav_add"
                android:textColor="@color/white"
                android:textSize="@dimen/table_contents_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nav_record_vaccination_out_catchment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/outofareaImageview"
                android:layout_width="@dimen/custom_navigation_icon_size"
                android:layout_height="@dimen/custom_navigation_icon_size"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_action_out_catchment" />

            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/outofareatextview"
                style="@style/CustomFontTextViewStyle.ClientList.Light.twoline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/side_nav_out_of_catchment"
                android:textColor="@color/white"
                android:textSize="@dimen/table_contents_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nav_sync"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/nav_syncImageview"
                android:layout_width="@dimen/custom_navigation_icon_size"
                android:layout_height="@dimen/custom_navigation_icon_size"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_action_sync" />

            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/nav_synctextview"
                style="@style/CustomFontTextViewStyle.ClientList.Light.twoline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/side_nav_sync"
                android:textColor="@color/white"
                android:textSize="@dimen/table_contents_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#373737"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/child_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/child_registerImageview"
                    android:layout_width="@dimen/registerlinkwidth"
                    android:layout_height="@dimen/registerlinkheight"
                    android:layout_margin="5dp"
                    android:paddingBottom="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:src="@drawable/zeir_big" />

                <org.smartregister.view.customcontrols.CustomFontTextView
                    android:id="@+id/child_registertextview"
                    style="@style/CustomFontTextViewStyle.ClientList.Light.twoline"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/label_text_size" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/hia2_reports"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/hia2_reports_image_view"
                    android:layout_width="@dimen/registerlinkwidth"
                    android:layout_height="@dimen/registerlinkheight"
                    android:layout_margin="5dp"
                    android:paddingBottom="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:src="@drawable/hia_big" />

                <org.smartregister.view.customcontrols.CustomFontTextView
                    android:id="@+id/hia2_reports_text_view"
                    style="@style/CustomFontTextViewStyle.ClientList.Light.twoline"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/side_nav_hia2"
                    android:textColor="@color/white"
                    android:textSize="@dimen/label_text_size" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/coverage_reports"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/coverage_reports_image_view"
                    android:layout_width="@dimen/registerlinkwidth"
                    android:layout_height="@dimen/registerlinkheight"
                    android:layout_margin="5dp"
                    android:paddingBottom="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:src="@drawable/coverage_big" />

                <org.smartregister.view.customcontrols.CustomFontTextView
                    android:id="@+id/coverage_reports_text_view"
                    style="@style/CustomFontTextViewStyle.ClientList.Light.twoline"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/side_nav_coverage"
                    android:textColor="@color/white"
                    android:textSize="@dimen/label_text_size" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/dropout_reports"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/dropout_reports_image_view"
                    android:layout_width="@dimen/registerlinkwidth"
                    android:layout_height="@dimen/registerlinkheight"
                    android:layout_margin="5dp"
                    android:paddingBottom="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:src="@drawable/dropout_big" />

                <org.smartregister.view.customcontrols.CustomFontTextView
                    android:id="@+id/dropout_text_view"
                    style="@style/CustomFontTextViewStyle.ClientList.Light.twoline"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/side_nav_dropout"
                    android:textColor="@color/white"
                    android:textSize="@dimen/label_text_size" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/stock_control"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/stock_control_image_view"
                    android:layout_width="@dimen/registerlinkwidth"
                    android:layout_height="@dimen/registerlinkheight"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="7dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:paddingBottom="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:src="@drawable/stockreg" />

                <org.smartregister.view.customcontrols.CustomFontTextView
                    android:id="@+id/stock_control_text_view"
                    style="@style/CustomFontTextViewStyle.ClientList.Light.twoline"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/stock_title"
                    android:textColor="@color/white"
                    android:textSize="@dimen/label_text_size" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</android.support.design.widget.NavigationView>